--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "csv-parse": "^5.3.5",
+    "csv-parser": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "stock-nse-india": "^1.1.2",
+    "ts-stream": "^3.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
